--- a/src/org/ref/游戏编程模式.org
+++ b/src/org/ref/游戏编程模式.org
@@ -48,7 +48,7 @@
                   undo   cur   redo
    每当undo则将三个指针向前移动, redo则向后移动, 如果有新的命令则将cur后面的命令
    全部丢弃
-3. 如果存在很多命令, 可以使用[[*][子类沙盒模式]]来在高层提供很多通用函数, 子类命令组合这些函数
+3. 如果存在很多命令, 可以使用[[*子类沙盒][子类沙盒模式]]来在高层提供很多通用函数, 子类命令组合这些函数
 4. 如果对象模型存在分层情况, 可以使用[[*责任链][责任链模式]]来将命令转发给附属对象
 5. 如果命令是无状态的代码块, 可以使用[[*享元模式][享元模式]]来降低内存使用
    
@@ -101,8 +101,8 @@
    种类是有限的, 但是整个世界的地块确可能存在千千万万, 这里便可以应用享元模式.
    不必未每个地块单独生成自己的地形, 而是让若干地块共享一个地形实例
 3. 如果不能预测共有多少享元, 那么最好按需创建, 可以使用[[*][工厂模式]]管理创建操作
-4. 为了更方便的管理享元, 可以使用[[*对象池模式][对象池模式]]来管理
-5. [[*状态机模式][状态机模式]]的状态也可以使用享元来表现
+4. 为了更方便的管理享元, 可以使用[[*对象池][对象池模式]]来管理
+5. [[*状态模式][状态模式]]的状态也可以使用享元来表现
 
 * 观察者模式
 1. 什么是观察者
@@ -174,3 +174,72 @@
 5. 目前更流行使用更灵活的观察者方法, 比如注册一个观察函数, 而不是继承一个类
 
 * 原型模式
+1. 什么是原型
+   #+BEGIN_VERSE
+   使用特定原型实例来创建特定种类的对象, 并且通过拷贝原型来创建新的对象
+   #+END_VERSE
+2. 经典场景, 怪物系统
+   #+CAPTION: 怪物实现
+   #+BEGIN_SRC c++
+     class Monster {
+      public:
+       virtual ~Monster() {}
+       virtual Monster* clone() = 0;
+     };
+
+     class Slime : public Monster {
+      public:
+       Slime(int health, int speed)
+           :_health(health) {}
+
+       virtual Monster* clone() {
+         return new Slime(_health)
+       }
+
+      private:
+       int _health;
+     };
+   #+End_src
+   无需定义工厂函数, 通过clone方法, 每个实例可以复制自身, 并且同时复制自身的状态
+   来创建若干个怪物对象
+   #+CAPTION: 怪物数据建模
+   #+BEGIN_SRC json
+     [
+         {
+             "name": "slime",
+             "maxHealth": 100,
+             "resists": ["cold", "posion"],
+             "weakness": ["fire", "light"]
+         },
+         {
+             "name": "slime queen",
+             "prototype": "slime",
+             "spells": ["fire ball", "ice nova"]
+         },
+         {
+             "name": "slime king",
+             "prototype": "slime",
+             "attacks": ["cyclone", "charge"]
+         }
+     ]
+   #+END_SRC
+   通过为每个怪物json设置原型字段, 可以有效实现相似怪物的属性共享, 新建怪物类型也
+   非常简单, 使用prototype字段设置一个原型
+3. 实现原型的clone时, 一定要注意对象的拷贝问题(深拷贝, 浅拷贝)
+4. [[*类型对象][类型对象模式]]和和原型模式有共同点
+
+* 单例模式
+* 状态模式
+* 双缓冲
+* 游戏循环
+* 更新方法
+* 字节码
+* 子类沙盒
+* 类型对象
+* 组件模式
+* 事件队列
+* 服务定位器
+* 数据局部性
+* 脏标记模式
+* 对象池
+* 空间分区
