[org] update note

--- a/src/org/gtd/live.org
+++ b/src/org/gtd/live.org
@@ -110,13 +110,22 @@ DEADLINE: <2021-06-06 周日 23:00 ++1w> SCHEDULED: <2021-06-05 周六 18:00 ++1
   ------------------------------------------------
   1. 自行车从家里邮过来之后组好, 送到车店保养.
   ------------------------------------------------
-** TODO [#A] 每月归档到年度文件                                     :event:
-DEADLINE: <2021-05-30 周日 23:00 ++1m> SCHEDULED: <2021-05-30 周日 09:00 ++1m>
+** TODO [#A] 每月归档到年度文件                                      :event:
+DEADLINE: <2021-06-30 Wed 23:00 ++1m> SCHEDULED: <2021-06-30 Wed 09:00 ++1m>
 :PROPERTIES:
 :STYLE:    habit
 :LOGGING: logrepeat DONE(@)
-:LAST_REPEAT: [2021-04-30 周五 23:01]
+:LAST_REPEAT: [2021-05-30 Sun 09:26]
 :END:
+- State "DONE"       from "TODO"       [2021-05-30 Sun 09:26] \\
+  入职之后的第二个月, 正式开始进入工作, 工作上主要完成:
+  1. 完成了m8英雄山基本功能的设计与实现(mvc)
+  2. 完成了m8临时组队功能的设置与实现(mvc)
+  3. 完成了大量m8界面优化相关的工单
+  4. 完成了ios和android平台真机包的制作
+  生活上：
+  1. 接种了两针新冠疫苗
+  2. 家里的东西, 办公用品基本置办齐全
 - State "DONE"       from "TODO"       [2021-04-30 周五 23:01] \\
   入职之后的第一个月, 生活和工作逐渐回到了正轨, 主要完成了以下几个主要事情:
   1. 学会了使用org-mode进行gtd管理
@@ -130,109 +139,6 @@ SCHEDULED: <2021-04-10 周六 13:20>
 - State "WAIT"       from "TODO"       [2021-04-10 周六 13:36] \\
   暂时没需求.
 DEADLINE: <2021-04-30 周五>
-** Archive                                                        :ARCHIVE:
-*** DONE [#C] 买键盘 [3/3]                                       :shopping:
-CLOSED: [2021-05-08 周六 15:45] SCHEDULED: <2022-04-03 周日 09:00>
-:PROPERTIES:
-:DEPENDENCE: 向大棠请教ps2转接口和打字键盘相关事宜
-:ARCHIVE_TIME: 2021-05-09 周日 10:16
-:END:
-- State "DONE"       from "WAIT"       [2021-05-08 周六 15:45] \\
-  没买, 公司配了一个青轴, 自己买了个红轴, 完美
-- State "WAIT"       from "TODO"       [2021-04-10 周六 13:54] \\
-  不太好买, 钱也没得, 先等等.
-- [X] 红轴游戏键盘
-- [X] 茶轴打字键盘
-- [X] ps2转usb接口
-*** DONE [#C] 从家里把需要的物品邮寄过来 [3/3]                      :event:
-CLOSED: [2021-05-01 Sat 19:27] DEADLINE: <2021-06-01 周二>
-:PROPERTIES:
-:ARCHIVE_TIME: 2021-05-09 周日 10:16
-:END:
-- State "DONE"       from "WAIT"       [2021-05-01 Sat 19:27]
-- State "WAIT"       from "TODO"       [2021-04-11 周日 16:25] \\
-  先不急, 电脑什么都没得
-- [X] 书籍 [14/14]
-  - [X] 代码整洁之道
-  - [X] 重构
-  - [X] Effective C
-  - [X] Effective Modern C++
-  - [X] 流畅的python
-  - [X] STL源码剖析
-  - [X] 编译原理
-  - [X] 具体数学
-  - [X] 设计模式
-  - [X] 人月神话
-  - [X] 编程之美
-  - [X] 算法导论
-  - [X] 生命是什么
-  - [X] 字帖
-- [X] 手柄
-- [X] Switch配件
-*** DONE [#B] 购买家具用品 [100%]                                :shopping:
-CLOSED: [2021-05-19 Wed 18:03] SCHEDULED: <2021-05-10 Mon 09:00>
-:PROPERTIES:
-:COOKIE_DATA: checkbox recursive
-:ORDERED: nil
-:ARCHIVE_TIME: 2021-05-24 周一 10:55
-:END:
-- State "DONE"       from "WAIT"       [2021-05-19 Wed 18:03]
-- [X] 床上用品 [8/8]
-  - [X] 床褥 ::
-  - [X] 被子 ::
-  - [X] 被套 ::
-  - [X] 枕套 ::
-  - [X] 枕头 ::
-  - [X] 床单 ::
-  - [X] 毛毯 ::
-  - [X] 床刷 ::
-- [X] 洗涤用品 [23/23]
-  - [X] 洗衣液 ::
-  - [X] 洗衣盆 ::
-  - [X] 消毒液 ::
-  - [X] 晾衣撑杆 ::
-  - [X] 肥皂 ::
-  - [X] 沐浴液 ::
-  - [X] 洗发露 ::
-  - [X] 香皂 ::
-  - [X] 拖布 ::
-  - [X] 扫把和簸箕 ::
-  - [X] 鞋刷 ::
-  - [X] 脚盆 ::
-  - [X] 落地衣架 ::
-  - [X] 衣架 ::
-  - [X] 多功能衣架 ::
-  - [X] 牙膏 ::
-  - [X] 牙刷 ::
-  - [X] 牙缸 ::
-  - [X] 卫生纸 ::
-  - [X] 毛巾 ::
-  - [X] 抹布 ::
-  - [X] 澡巾三件套 ::
-  - [X] 马桶刷 :: 
-- [X] 厨具 [7/7]
-  - [X] 垃圾袋 ::
-  - [X] 垃圾桶 ::
-  - [X] 水果刀 ::
-  - [X] 电热水壶 ::
-  - [X] 水杯 ::
-  - [X] 剪刀 ::
-  - [X] 果盘 ::
-- [X] 家具 [7/7]
-  - [X] 床头灯 ::
-  - [X] 挂钩 ::
-  - [X] 床头柜 ::
-  - [X] 桌子 ::
-  - [X] 人体工学椅子 ::
-  - [X] 普通凳子 ::
-  - [X] 置物架 ::
-- [X] 其他 [6/6]
-  - [X] 自行车水杯 ::
-  - [X] 硬板鞋垫 :: 无异味
-  - [X] 闹钟 ::
-  - [X] 五号电池 ::
-  - [X] 电蚊香 ::
-  - [X] 多功能螺丝套件 ::
 * Appointment
 ** TODO [#B] 组装一台性价比高的台式机用于开发和娱乐       :shopping:future:
 <2021-06-01 周二>--<2021-06-30 周三>
@@ -259,15 +165,5 @@ CLOSED: [2021-05-19 Wed 18:03] SCHEDULED: <2021-05-10 Mon 09:00>
 ** WAIT [#C] 爬火炉山                                               :event:
 - State "WAIT"       from "TODO"       [2021-04-11 周日 16:29] \\
   和同事商量一下一起去, 先不急.
-** Archive                                                        :ARCHIVE:
-*** DONE 第二针aero新冠疫苗接种                                     :event:
-CLOSED: [2021-05-19 Wed 13:32]
-:PROPERTIES:
-:ARCHIVE_TIME: 2021-05-24 周一 10:55
-:END:
-- State "DONE"       from "TODO"       [2021-05-19 Wed 13:32]
-- Note taken on [2021-04-21 周三 15:58] \\
-  必须携带单据打第二针, 单据在公司抽屉第二层
-<2021-05-12 周三>--<2021-06-15 周二>
 * Project
 * Someday
