--- a/src/org/gtd/work.org
+++ b/src/org/gtd/work.org
@@ -14,12 +14,14 @@
 * Inbox
 * Next Action
 ** TODO [#A] 完成每日日报                                             :work:
-SCHEDULED: <2021-06-01 周二 19:00 ++1d> DEADLINE: <2021-05-31 周一 23:59 ++1d>
+SCHEDULED: <2021-06-02 Wed 19:00 ++1d> DEADLINE: <2021-06-02 Wed 23:59 ++1d>
 :PROPERTIES:
 :STYLE:    habit
-:LAST_REPEAT: [2021-05-31 周一 21:38]
+:LAST_REPEAT: [2021-06-01 Tue 11:36]
 :END:
 
+- State "CANCELED"   from "TODO"       [2021-06-01 Tue 11:36] \\
+  儿童节放假
 - State "DONE"       from "TODO"       [2021-05-31 周一 21:38]
 - State "CANCELED"   from "TODO"       [2021-05-30 Sun 09:17] \\
   放假
@@ -114,13 +116,14 @@ SCHEDULED: <2021-06-05 周六 18:00 ++1w> DEADLINE: <2021-06-07 周一 12:00 ++1
 - State "DONE"       from "TODO"       [2021-04-06 周二 09:23]
 - State "DONE"       from "TODO"       [2021-03-29 周一 9:50]
 ** TODO [#C] 完成leetcode一两道题                                    :learn:
-SCHEDULED: <2021-06-01 周二 19:00 ++1d>
+SCHEDULED: <2021-06-02 Wed 19:00 ++1d>
 :PROPERTIES:
 :EFFORT: 0:15
 :LINK: [[https://leetcode-cn.com][leetcode]]
 :STYLE:    habit
-:LAST_REPEAT: [2021-05-31 周一 21:39]
+:LAST_REPEAT: [2021-06-01 Tue 11:37]
 :END:
+- State "DONE"       from "TODO"       [2021-06-01 Tue 11:37]
 - State "DONE"       from "TODO"       [2021-05-31 周一 21:39]
 - State "DONE"       from "TODO"       [2021-05-30 Sun 10:08]
 - State "DONE"       from "TODO"       [2021-05-29 周六 19:17]
