[org] update note

--- a/src/org/gtd/work.org
+++ b/src/org/gtd/work.org
@@ -185,14 +185,15 @@ SCHEDULED: <2021-06-02 Wed 19:00 ++1d>
 - State "DONE"       from "TODO"       [2021-03-31 Wed 23:57]
 - State "DONE"       from "TODO"       [2021-03-30 Tue 23:41]
 - State "DONE"       from "TODO"       [2021-03-30 周二 09:49]
-** TODO [#A] 学习《游戏编程模式》                            :learn:ATTACH:
-SCHEDULED: <2021-06-01 周二 09:00 ++1d>
+** TODO [#A] 学习《游戏编程模式》                             :learn:ATTACH:
+SCHEDULED: <2021-06-02 周三 09:00 ++1d>
 :PROPERTIES:
 :ID:       b2e6045c-58c3-4359-90d4-74fb2660b8da
 :ATTACH: [[attachment:游戏编程模式.org][游戏编程模式笔记]]
 :STYLE:    habit
-:LAST_REPEAT: [2021-05-31 周一 21:39]
+:LAST_REPEAT: [2021-06-01 周二 21:31]
 :END:
+- State "DONE"       from "TODO"       [2021-06-01 周二 21:31]
 - State "DONE"       from "TODO"       [2021-05-31 周一 21:39]
 - State "DONE"       from "TODO"       [2021-05-28 周五 19:07]
 - State "CANCELED"   from "TODO"       [2021-05-22 Sat 12:39] \\
