--- a/src/org/ref/游戏编程模式.org
+++ b/src/org/ref/游戏编程模式.org
@@ -73,6 +73,7 @@
    我们把这些内部对象称为享元(共享的单元)
    #+END_VERSE
 2. 经典场景, 瓦片世界
+   #+DESCRIPTION: 实现一个拥有不同地形的世界
    #+BEGIN_SRC c++
      class Terrain {  // 地形类, 拥有自己的移动开销和纹理
       public:
@@ -122,6 +123,7 @@
    都能收到通知并自动更新
    #+END_VERSE
 2. 经典场景, 成就系统
+   #+DESCRIPTION: 实现一个物理和成就系统解耦的系统
    #+BEGIN_SRC c++
      class Observer {
       public:
@@ -245,6 +247,7 @@
    确保一个类只有一个实例, 并为其提供一个全局访问入口
    #+END_VERSE
 2. 经典场景, 文件系统
+   #+DESCRIPTION: 实现一个跨平台的公共文件系统接口
    #+BEGIN_SRC c++
      class FileSystem {
       public:
@@ -296,8 +299,304 @@
    5. 使用[[*服务定位器][服务定位器]]来访问
    6. [[*子类沙盒][子类沙盒]]可以为子类提供一些共享的状态访问, 而不必全局可见
 * 状态模式
+1. 什么是状态模式
+   #+BEGIN_VERSE
+   允许一个对象在其内部状态改变时改变自身的行为, 对象看起来好像在修改自身类
+   #+END_VERSE
+2. 经典场景, 动作系统
+   #+CAPTION: 有限状态机
+   #+DESCRIPTION: 为人物主角的每个动作关联图像, 并在各种动作(跳跃, 闪避, 下蹲, 攻击)中切换
+   #+BEGIN_SRC c++
+     class HeroState {
+      public:
+       virtual ~HeroState() {}
+       virtual HeroState* handleInput(Hero& hero, Input input) = 0;  // 处理输入
+       virtual void update(float time) = 0;  // 每帧的动作
+       virtual void enter(Hero& hero) = 0;  // 进入此状态执行的操作
+     };
+
+     class Hero {
+      public:
+       void handleInput(Input input) {
+         HeroState* new_state = _state->handleInput(*this, input);
+         if (new_state != nullptr) {
+           delete _state;
+           _state = new_state;
+           _state->enter(*this);
+         }
+       }
+       void update(float time) {
+         _state->update(time);
+       }
+      private:
+       HeroState* _state;
+     };
+
+     class DuckState: public HeroState {
+      public:
+       DuckState() {}
+       HeroState* handleInput(Hero& hero, Input input) override {
+         if (input == RELEASE_DOWN) {
+           return new StandState();
+         } else {
+           return nullptr;
+         }
+       }
+       void update(float time) override {}
+       void enter(Hero& hero) override {
+         hero.SetGraphics(IMAGE_DUCK);
+       }
+     };
+
+     class StandState: public HeroState {
+      public:
+       StandState() {}
+       HeroState* handleInput(Hero& hero, Input input) override {
+         if (input == PRESS_DOWN) {
+           return new DuckState();
+         } else if (input == PRESS_UP) {
+           return new JumpState();
+         } else if (input == PRESS_B) {
+           return new DodgeState();
+         } else {
+           return nullptr;
+         }
+       }
+       void update(float time) override {}
+       void enter(Hero& hero) override {
+         hero.SetGraphics(IMAGE_STAND);
+       }
+     };
+
+     class JumpState: public HeroState {
+      public:
+       JumpState() {}
+       HeroState* handleInput(Hero& hero, Input input) override {
+         if (_play_time > 1) {
+           return new StandState();
+         } else {
+           return nullptr;
+         }
+       }
+       void update(float time) override {
+         if (_play_time == 0) {
+           _play_time = time;
+         } else {
+           _play_time = time - _play_time;
+         }
+       }
+       void enter(Hero& hero) override {
+         hero.SetGraphics(IMAGE_JUMP);
+       }
+      private:
+       float _play_time = 0;
+     };
+
+     class DodgeState: public HeroState {
+      public:
+       DodgeState() {}
+       HeroState* handleInput(Hero& hero, Input input) override {
+         if (_play_time > 1) {
+           return new StandState();
+         } else {
+           return nullptr;
+         }
+       }
+       void update(float time) override {
+         if (_play_time == 0) {
+           _play_time = time;
+         } else {
+           _play_time = time - _play_time;
+         }
+       }
+       void enter(Hero& hero) override {
+         hero.SetGraphics(IMAGE_DODGE);
+       }
+      private:
+       float _play_time = 0;
+     };
+   #+END_SRC
+   使用状态机有效避免了同时维护多种状态和使用多个ifelse语句, 每个状态只需要处理自
+   己接受的输入并转换为对应的状态. 如果不使用状态机而只是单纯的使用ifelse语句, 随
+   着状态的增加会越来越难以维护(比如跳跃时是否可以下蹲?, 是否可以攻击?)
+3. 状态的两种形式
+   - 如果状态本身是无状态的, 那么所有相同状态之间可以共享一个相同实例
+   - 如果状态本身是有状态的, 那么需要为每个状态创建实例
+4. 有限状态机
+   - *你拥有一组状态, 并且可以再这组状态之间切换*
+   - *状态机同一时刻只能处于一种状态*
+   - *状态机会接收一组输入或者事件*
+   - *每个状态都有一组转换, 每一个转换都关联着一个输入并指向另一个状态*
+5. 并发状态机
+   如果存在另一种类型的状态, 和当前的状态无关, 那么可以额外维护一个新的状态, 用两
+   个状态机而不是一个状态机来表示. 假设之前有n个状态, 新增的有m个状态, 那么使用
+   一个状态机共有 /mxn/ 种状态要处理, 而使用两个状态机只需要 /m+n/ 种状态
+6. 层次状态机
+   如果很多状态有大量相似的状态, 那么可以为这些状态设置父状态, 当子状态无法处理输
+   入时, 交给父状态来处理, 如果所有父状态都无法处理则忽略此输入
+   1. 使用继承来实现, 父类实现共性状态
+   2. 不再使用一个状态变量, 而是维护一个状态栈来实现, 子状态在栈顶, 下面依次是他
+      的父状态, 父状态的父状态, 以此类推, 栈底是祖先
+7. 下推状态机
+   如果你的状态需要历史记录(当前状态结束想要回到上一个状态), 那么可以维护一个状态
+   栈:
+   - 当前状态永远在栈顶. 当状态切换的时候, 将当前状态压栈, 然后将新状态入栈
+   - 当想切换到之前的状态时, 将栈顶出栈即可
+8. 状态模式的使用场景
+   - 你有一个游戏实体, 它的行为基于它的内部状态而改变
+   - 这些状态被严格划分为相对数目较少的小集合
+   - 游戏实体随着时间变化会相应用户的输入和游戏事件
 * 双缓冲
+1. 什么是双缓冲
+   #+BEGIN_VERSE
+   维护两个缓冲区, 当前缓冲区和后台缓冲区. 每当读取数据时, 总是从当前缓冲区读取,
+   每当修改数据时, 总是修改后台缓冲区, 当修改完成时, 交换两者. 使得当前缓冲区变
+   为后台缓冲区以供复用
+   #+END_VERSE
+2. 经典场景, 视频渲染
+   #+CAPTION: 视频渲染原理
+   #+BEGIN_SRC c++
+     class FrameBuffer {  // 帧缓冲
+      public:
+       FrameBuffer() {}
+       void clear(); // 清空全部内容
+       void draw(int x, int y);  // 修改某个像素的值
+       char getPixel(int x, int y); // 获得某个像素的值
+
+       static const int WIDTH = 1920;
+       static const int HEIGHT = 1080;
+
+      private:
+       char _pixels[WIDTH*HEIGHT];
+     };
+
+     class Scene {
+      public:
+       Scene(): _current(&_buffers[0]), _backstage(&_buffers[1]) {}
+       void draw() {  // 绘制新的画面
+         _backstage->clear();
+         for (int i = 0; i < FrameBuffer::HEIGHT; ++i) {
+           _backstage->draw(i, i); // 绘制斜线
+         }
+         swap();
+       }
+
+       Framebuffer& getBuffer() { return *_current; }  // 获得当前的画面
+
+      private:
+       void swap() {
+         FrameBuffer* tmp = _backstage;
+         _backstage = _current;
+         _current = tmp;
+       }
+
+       FrameBuffer _buffers[2];
+       FrameBuffer* _current;  // 当前缓冲, 用于显示
+       FrameBuffer* _backstage; // 后台缓冲, 用于写入
+     };
+   #+END_SRC
+   通过维护两个缓冲, 有效的避免了渲染的时候修改正在被渲染的数据导致画面撕裂, 使用
+   双缓冲的主要目的正是为了解决这两种情况:
+   - 状态直接被中断或者另一个线程的代码所访问
+   - 进行状态修改的代码访问到了其正在修改的那个状态
+   视频渲染正是第一种情况
+3. 使用情景:
+   * 我们需要维护一些被逐步改变的状态量
+   * 同个状态可能在被修改的时候被访问到
+   * 我们希望避免访问状态的代码看到具体的工作过程
+   * 我们希望能够读取状态但不希望等待写入操作完成
+4. 缓冲区如何被交换
+   - 交换指针 :: 简单高效, 但是无法复用当前缓冲的数据
+   - 数据拷贝 :: 将后台数据拷贝到当前缓冲, 当前永远落后后台一帧, 可以实现数据复用
+     对于小的缓冲区来说是可以接受的, 但当缓冲区很大的时候复制会消耗大量时间
+5. 缓冲区的粒度
+   - 缓冲区是单个整体 :: 交换一次即可
+   - 缓冲区分布在多个对象之中 :: 依次遍历每个对象来完成交换
 * 游戏循环
+1. 什么是游戏循环
+   #+BEGIN_VERSE
+   "实现用户输入和处理器速度在游戏进行时间上的解耦"
+   通俗来说就是维护一个循环使游戏一直运转, 同时可以不阻塞的响应用户的输入
+   #+END_VERSE
+2. 经典场景
+   #+CAPTION: 基础游戏循环结构, 非同步固定时间步长
+   #+BEGIN_SRC c++
+     while (true) {
+       processInput();  // 处理用户输入
+       update();  // 更新游戏内部状态
+       render();  // 渲染游戏内容
+     }
+   #+END_SRC
+   这是游戏循环的核心逻辑, 但是机能和一帧内处理的信息会影响游戏的速度, 你无法
+   控制游戏速度的快慢, 在性能强劲的机器上和垃圾的机器上运行速度天差地别
+   #+CAPTION: 同步固定时间步长
+   #+BEGIN_SRC c++
+     const double MS_PER_FRAME = 16.6;  // 每一帧的时间设置为16ms, 1000ms/MS_PER_FRAME = 60FPS
+     while (true) {
+       double start = getCurrentTime();
+       processInput();
+       update();
+       render();
+
+       sleep(start + MS_PER_FRAME- getCurrentTime());  // 当处理速度很快时, 将休眠等待真实时间
+     }
+   #+END_SRC
+   这种方法可以保证如果处理速度很快, 游戏也会按照固定的速度的运行. 但是如果游戏
+   运行速度慢这个方法将退化到基础循环的情况
+   #+CAPTION: 变时步长
+   #+BEGIN_SRC c++
+     double lastTime = getCurrentTime();
+     while (true) {
+       double current = getCurrentTime();
+       double elapsed = current - lastTime;
+       processInput();
+       update(elapsed); // 根据两帧之间的间隔动态计算游戏状态
+       render();
+       lastTime = current;
+     }
+   #+END_SRC
+   首先这种方法确实可以让不同的硬件以相同的速度运行, 但是有一个非常严重的问题, 它
+   会让游戏变得不稳定. 因为不同机器update调用的次数是不一致的, 快的多, 慢的少,
+   如果游戏内部有浮点数累加等操作, update的多会迅速累积大量误差.
+   #+CAPTION: 定时更新, 变时渲染
+   #+BEGIN_SRC c++
+     double previous = getCurrentTime();
+     double lag = 0.0;
+     while (true) {
+       double current = getCurrentTime();
+       double elapsed = current - previous;
+       previous = current;
+       lag += elapsed;  // lag代表游戏状态时间落后于真实时间的值
+       processInput();
+
+       while (lag >= MS_PER_UPDATE) { // 每当落后一个MS_PER_UPDATE, 更新游戏状态, 追回时间
+         update();
+         // 这里要注意MS_PER_UPDATE必须要大于update消耗的时间, 如果小于则永远无法追上真实时间
+         lag -= MS_PER_UPDATE;
+       }
+       render(lag/MS_PER_UPDATE); // 为了避免两帧渲染相同画面, render需要根据落后时间计算画面
+     }
+   #+END_SRC
+   这个是最具有普适性的游戏循环方法, 通过将渲染和更新分离, 可以适应过快或者过慢的
+   平台, 不同机器update速度是一致的, 但是性能好的机器可以 享受到更好的游戏体验
+   (render次数更多)
+3. 使用场景:
+   只要是游戏一定会用到, 这就是91定律里面的10%部分的代码, 这里的一点点错误会影响
+   到整个游戏
+4. 谁来控制游戏循环
+   * 平台事件循环
+     - 相对简单
+     - 与平台完美兼容
+     - 失去了对游戏时间的控制, 而且实现理念很可能不适合于游戏
+   * 游戏引擎游戏循环
+     - 当出现一些和游戏引擎循环不合拍的需求时, 你无法获得控制权
+   * 自己编写游戏循环
+     - 掌控一切, 可以随心所欲
+     - 需要实现各个平台接口, 并且要定期将操作权交给系统来保证框架的稳定
+5. 能量损耗
+   在pc上可以不限制帧率, 能跑多快就跑多快, 但是在移动设备上最好限制帧率, 让多余的
+   时间用来休眠, 有效降低电量损耗
+   
 * 更新方法
 * 字节码
 * 子类沙盒
