--- a/src/org/gtd/work.org
+++ b/src/org/gtd/work.org
@@ -14,12 +14,13 @@
 * Inbox
 * Next Action
 ** TODO [#A] 完成每日日报                                            :work:
-SCHEDULED: <2021-06-05 周六 19:00 ++1d> DEADLINE: <2021-06-05 周六 23:59 ++1d>
+SCHEDULED: <2021-06-06 周日 19:00 ++1d> DEADLINE: <2021-06-06 周日 23:59 ++1d>
 :PROPERTIES:
 :STYLE:    habit
-:LAST_REPEAT: [2021-06-04 周五 21:59]
+:LAST_REPEAT: [2021-06-05 周六 19:00]
 :END:
 
+- State "DONE"       from "TODO"       [2021-06-05 周六 19:00]
 - State "DONE"       from "TODO"       [2021-06-04 周五 21:59]
 - State "DONE"       from "TODO"       [2021-06-03 周四 21:11]
 - State "DONE"       from "TODO"       [2021-06-02 周三 21:18]
@@ -119,13 +120,15 @@ SCHEDULED: <2021-06-05 周六 18:00 ++1w> DEADLINE: <2021-06-07 周一 12:00 ++1
 - State "DONE"       from "TODO"       [2021-04-06 周二 09:23]
 - State "DONE"       from "TODO"       [2021-03-29 周一 9:50]
 ** TODO [#C] 完成leetcode一两道题                                   :learn:
-SCHEDULED: <2021-06-05 周六 19:00 ++1d>
+SCHEDULED: <2021-06-06 周日 19:00 ++1d>
 :PROPERTIES:
 :EFFORT: 0:15
 :LINK: [[https://leetcode-cn.com][leetcode]]
 :STYLE:    habit
-:LAST_REPEAT: [2021-06-04 周五 09:28]
+:LAST_REPEAT: [2021-06-05 周六 19:01]
 :END:
+- State "CANCELED"   from "TODO"       [2021-06-05 周六 19:01] \\
+  工作任务紧急, 搁置
 - State "DONE"       from "TODO"       [2021-06-04 周五 09:28]
 - State "DONE"       from "TODO"       [2021-06-03 周四 08:59]
 - State "DONE"       from "TODO"       [2021-06-02 周三 08:49]
@@ -192,13 +195,15 @@ SCHEDULED: <2021-06-05 周六 19:00 ++1d>
 - State "DONE"       from "TODO"       [2021-03-30 Tue 23:41]
 - State "DONE"       from "TODO"       [2021-03-30 周二 09:49]
 ** TODO [#A] 学习《游戏编程模式》                            :learn:ATTACH:
-SCHEDULED: <2021-06-05 周六 09:00 ++1d>
+SCHEDULED: <2021-06-06 周日 09:00 ++1d>
 :PROPERTIES:
 :ID:       b2e6045c-58c3-4359-90d4-74fb2660b8da
 :ATTACH: [[attachment:游戏编程模式.org][游戏编程模式笔记]]
 :STYLE:    habit
-:LAST_REPEAT: [2021-06-04 周五 10:37]
+:LAST_REPEAT: [2021-06-05 周六 19:00]
 :END:
+- State "CANCELED"   from "TODO"       [2021-06-05 周六 19:00] \\
+  工作任务紧急, 搁置
 - State "DONE"       from "TODO"       [2021-06-04 周五 10:37]
 - State "DONE"       from "TODO"       [2021-06-03 周四 09:52]
 - State "DONE"       from "TODO"       [2021-06-02 周三 10:43]
@@ -222,6 +227,10 @@ SCHEDULED: <2021-06-05 周六 09:00 ++1d>
 - State "CANCELED"   from "TODO"       [2021-05-12 周三 21:21] \\
   没时间
 - State "DONE"       from "TODO"       [2021-05-10 周一 11:09]
+** TODO [#A] 准备转正报告                                            :work:
+SCHEDULED: <2021-06-07 周一 19:03>
+** TODO [#A] 编写季度报告                                            :work:
+SCHEDULED: <2021-06-06 周日 09:00>
 * Appointment
 * Project
 ** SCH [#A] 单人多队战斗                                           :work:m8:
