[org] update note

--- a/src/org/gtd/live.org
+++ b/src/org/gtd/live.org
@@ -24,13 +24,32 @@ DEADLINE: <2021-06-12 周六 23:00 +1m> SCHEDULED: <2021-06-12 周六 09:00 +1m>
   2. 房间里的马桶坏了, 电磁炉可能坏了, 阳台灯坏了
   3. 本月电费50, 物业+水103
   4. 1+2(一个月房租+两个月押金) 6000
-** TODO [#A] 归档并回顾一周的计划                                   :event:
-DEADLINE: <2021-06-06 周日 23:00 ++1w> SCHEDULED: <2021-06-05 周六 18:00 ++1w>
+** TODO [#A] 归档并回顾一周的计划                                    :event:
+DEADLINE: <2021-06-13 Sun 23:00 ++1w> SCHEDULED: <2021-06-12 Sat 18:00 ++1w>
 :PROPERTIES:
 :STYLE:    habit
 :LOGGING: logrepeat DONE(@)
-:LAST_REPEAT: [2021-05-29 周六 16:22]
+:LAST_REPEAT: [2021-06-06 Sun 23:55]
 :END:
+- State "DONE"       from "TODO"       [2021-06-06 Sun 23:55] \\
+  1. 本周在实现单人多队战斗，截止到今天完成60%
+     1. 主要工作点:
+        1. 多队战斗的设计和建模(单人和组队)
+        2. 如何在尽可能在不破坏原有代码结构的情况下增加多队战斗功能
+           1. 界面上选择在当前界面上覆盖一层多队战斗界面而不是直接修改战斗界面
+           2. 重构了模型层设置关卡的逻辑, 尽可能将各个玩法抽离, 目前还有部分耦合, 不过已经可以在不修改
+              其他函数的情况下增加多队的功能
+           3. 界面层和模型层一样做了类似的重构
+        3. 小队拖动功能的合理实现
+     2. 主要待实现点:
+        1. 布局界面英雄选框在各个小队之间共享状态
+        2. 战斗布局时上场英雄和战斗进行时显示数据不匹配
+        3. 不同回合间英雄生命值状态的传递
+        4. 战斗结束或中断时的处理
+  ------------------------------------------------
+  1. 办理了电信300m宽带, 129每月, 还未安装
+  ------------------------------------------------
+  1. 工作的时候就工作, 玩的时候就玩, 不要边工作边玩, 弄的两边都不尽兴
 - State "DONE"       from "TODO"       [2021-05-29 周六 16:22] \\
   1. 支持服务器外测服和真机连接外测服
   2. 处理ios真机包首登无网络配置弹窗问题
