[org] update note

--- a/src/org/gtd/live.org
+++ b/src/org/gtd/live.org
@@ -48,6 +48,7 @@ DEADLINE: <2021-06-13 Sun 23:00 ++1w> SCHEDULED: <2021-06-12 Sat 18:00 ++1w>
         4. 战斗结束或中断时的处理
   ------------------------------------------------
   1. 办理了电信300m宽带, 129每月, 还未安装
+  2. 每天开空调睡觉, 电费上涨100%
   ------------------------------------------------
   1. 工作的时候就工作, 玩的时候就玩, 不要边工作边玩, 弄的两边都不尽兴
 - State "DONE"       from "TODO"       [2021-05-29 周六 16:22] \\
