--- a/src/org/gtd/work.org
+++ b/src/org/gtd/work.org
@@ -14,12 +14,13 @@
 * Inbox
 * Next Action
 ** TODO [#A] 完成每日日报                                            :work:
-SCHEDULED: <2021-06-07 周一 19:00 ++1d> DEADLINE: <2021-06-07 周一 23:59 ++1d>
+SCHEDULED: <2021-06-08 周二 19:00 ++1d> DEADLINE: <2021-06-08 周二 23:59 ++1d>
 :PROPERTIES:
 :STYLE:    habit
-:LAST_REPEAT: [2021-06-06 周日 21:33]
+:LAST_REPEAT: [2021-06-07 周一 18:09]
 :END:
 
+- State "DONE"       from "TODO"       [2021-06-07 周一 18:09]
 - State "CANCELED"   from "TODO"       [2021-06-06 周日 21:33] \\
   放假
 - State "DONE"       from "TODO"       [2021-06-05 周六 19:00]
@@ -106,11 +107,12 @@ SCHEDULED: <2021-06-07 周一 19:00 ++1d> DEADLINE: <2021-06-07 周一 23:59 ++1
 - State "DONE"       from "TODO"       [2021-03-30 周二 21:06]
 - State "DONE"       from "TODO"       [2021-03-29 周一 21:11]
 ** TODO [#A] 完成每周周报                                            :work:
-SCHEDULED: <2021-06-05 周六 18:00 ++1w> DEADLINE: <2021-06-07 周一 12:00 ++1w>
+SCHEDULED: <2021-06-12 周六 18:00 ++1w> DEADLINE: <2021-06-14 周一 12:00 ++1w>
 :PROPERTIES:
 :STYLE:    habit
-:LAST_REPEAT: [2021-05-29 周六 18:22]
+:LAST_REPEAT: [2021-06-07 周一 10:33]
 :END:
+- State "DONE"       from "TODO"       [2021-06-07 周一 10:33]
 - State "DONE"       from "TODO"       [2021-05-29 周六 18:22]
 - State "DONE"       from "TODO"       [2021-05-24 周一 11:00]
 - State "DONE"       from "TODO"       [2021-05-16 周日 23:48]
@@ -122,13 +124,14 @@ SCHEDULED: <2021-06-05 周六 18:00 ++1w> DEADLINE: <2021-06-07 周一 12:00 ++1
 - State "DONE"       from "TODO"       [2021-04-06 周二 09:23]
 - State "DONE"       from "TODO"       [2021-03-29 周一 9:50]
 ** TODO [#C] 完成leetcode一两道题                                   :learn:
-SCHEDULED: <2021-06-07 周一 19:00 ++1d>
+SCHEDULED: <2021-06-08 周二 19:00 ++1d>
 :PROPERTIES:
 :EFFORT: 0:15
 :LINK: [[https://leetcode-cn.com][leetcode]]
 :STYLE:    habit
-:LAST_REPEAT: [2021-06-06 周日 21:34]
+:LAST_REPEAT: [2021-06-07 周一 09:15]
 :END:
+- State "DONE"       from "TODO"       [2021-06-07 周一 09:15]
 - State "CANCELED"   from "TODO"       [2021-06-06 周日 21:34] \\
   没时间
 - State "CANCELED"   from "TODO"       [2021-06-05 周六 19:01] \\
@@ -199,13 +202,14 @@ SCHEDULED: <2021-06-07 周一 19:00 ++1d>
 - State "DONE"       from "TODO"       [2021-03-30 Tue 23:41]
 - State "DONE"       from "TODO"       [2021-03-30 周二 09:49]
 ** TODO [#A] 学习《游戏编程模式》                            :learn:ATTACH:
-SCHEDULED: <2021-06-07 周一 09:00 ++1d>
+SCHEDULED: <2021-06-08 周二 09:00 ++1d>
 :PROPERTIES:
-:ID:       b2e6045c-58c3-4359-90d4-74fb2660b8da
-:ATTACH: [[attachment:游戏编程模式.org][游戏编程模式笔记]]
 :STYLE:    habit
-:LAST_REPEAT: [2021-06-06 周日 21:33]
+:ATTACH:  [[attachment:游戏编程模式.org][游戏编程模式]] 
+:LAST_REPEAT: [2021-06-07 周一 14:06]
+:ID:       9f4da250-7217-4dae-b806-bb1d74142050
 :END:
+- State "DONE"       from "TODO"       [2021-06-07 周一 14:06]
 - State "CANCELED"   from "TODO"       [2021-06-06 周日 21:33] \\
   没做
 - State "CANCELED"   from "TODO"       [2021-06-05 周六 19:00] \\
@@ -235,8 +239,9 @@ SCHEDULED: <2021-06-07 周一 09:00 ++1d>
 - State "DONE"       from "TODO"       [2021-05-10 周一 11:09]
 ** TODO [#A] 准备转正报告                                            :work:
 SCHEDULED: <2021-06-07 周一 19:03>
-** TODO [#A] 编写季度报告                                            :work:
-SCHEDULED: <2021-06-06 周日 09:00>
+** DONE [#A] 编写季度报告                                            :work:
+CLOSED: [2021-06-07 周一 18:09] SCHEDULED: <2021-06-06 周日 09:00>
+- State "DONE"       from "TODO"       [2021-06-07 周一 18:09]
 * Appointment
 * Project
 ** SCH [#A] 单人多队战斗                                           :work:m8:
@@ -276,7 +281,7 @@ CLOSED: [2021-06-03 周四 19:18] SCHEDULED: <2021-06-02 周三 17:40>
 - State "DONE"       from "TODO"       [2021-06-03 周四 19:18]
 - [X] 重构战斗布局模型层部分代码
 - [X] 实现多人战斗模型
-*** TODO 实现界面层, 连接战斗界面 [30%]
+*** TODO 实现界面层, 连接战斗界面 [40%]
 SCHEDULED: <2021-06-03 周四 19:18>
 :PROPERTIES:
 :TRIGGER:  next-sibling todo!(TODO) scheduled!("++0h") chain!("TRIGGER")
@@ -284,12 +289,12 @@ SCHEDULED: <2021-06-03 周四 19:18>
 - [X] 重构战斗界面, 增加钩子
 - [X] 小队拖动功能
 - [X] 多队上阵切换功能
+- [X] 多队车轮战斗
 - [ ] 战斗结束处理
 - [ ] 单人三队入场条件判断
 - [ ] 人员未满无法进行战斗
-- [ ] 多队车轮战斗
-- [ ] 单人三队英雄选择状态共享
 - [ ] 战斗结束后生命状态的传递
+- [ ] 单人三队英雄选择状态共享
 - [ ] 红点功能
 *** WAIT 测试
 :PROPERTIES:                          
